manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brief-api
  namespace: brief-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: brief-api
  template:
    metadata:
      labels:
        app: brief-api
    spec:
      containers:
        - name: brief-api
          image: sengsathit/brief-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: mysql-secret-vol
              mountPath: /etc/secrets/mysql
              readOnly: true
      volumes:
        - name: mysql-secret-vol
          secret:
            secretName: mysql-secret
